# BlenderScriptUtils

./: LICENSE  pyproject.toml
src/blender_script_utils/: dotsToVectors.py
