[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blender-script-utils"
version = "0.1.0"
authors = [
  { name="Royalturtle", email="aabut27@gmail.com" },
]
description = "Utils about blender scripting."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.urls]
"Homepage" = "https://github.com/royalturtle/BlenderScriptUtils"
"Bug Tracker" = "https://github.com/royalturtle/BlenderScriptUtils/issues"